Updated '/bio-nederlands.html' via CloudCannon

--- a/bio-nederlands.html
+++ b/bio-nederlands.html
@@ -20,23 +20,23 @@ SUPPORTED: flyleft, flyright, flyup, flydown, home, back, menu, fadein, fadeout
  
 <!-- Mirrored from withoutcoding.com/editions/preview/33/bio-nederlands by HTTrack Website Copier/3.x [XR&CO'2013], Tue, 03 Nov 2015 08:50:18 GMT -->
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
-<HEAD>
+<head>
   <!-- InstanceBeginEditable name="doctitle" -->
   <title> bio Nederlands</title>
   <!-- InstanceEndEditable -->
   <!-- InstanceBeginEditable name="head" --><!-- InstanceEndEditable -->
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <meta name="viewport" content="width=1400">
-  <meta name="mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <meta name="viewport" content="width=1400" />
+  <meta name="mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
   <!--Link to mobile version -->
-<link rel="alternate" media="only screen and (max-width: 640px)" href="bio-nederlands-2.html" >
+<link rel="alternate" media="only screen and (max-width: 640px)" href="bio-nederlands-2.html" />
 
   <script type="text/javascript" src="js/jquery-1.11.2.min.js"></script>
   <script type="text/javascript" src="js/modernizr.touch.js"></script>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-          <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
-          <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css'>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" />
+          <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css' />
+          <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css' />
     
 
 <style type="text/css">
@@ -526,13 +526,11 @@ $(document).ready(function() {
  ga('send', 'pageview');
 
 </script>
- </HEAD>
- <BODY>
+ </head>
+ <body>
  <div id="innerinnerbody">
  <div id="innerbody">
- <div id="bg" 
-   style="background: url('jpg/363.jpg') center center no-repeat; background-size: cover;"
-  >
+ <div id="bg" style="background: url('jpg/363.jpg') center center no-repeat; background-size: cover;">
   </div>
      <div id="container">
 
@@ -568,8 +566,7 @@ $(document).ready(function() {
 
   
   
-    <div      
-    style="overflow: auto; position: absolute; 
+    <div style="overflow: auto; position: absolute; 
     text-align: left; 
     left: 693px; 
     top: 206px; 
@@ -578,12 +575,7 @@ $(document).ready(function() {
     color: rgb(255,255,255); 
     font-size:18px;line-height:25px;letter-spacing:0px;text-align:left;;
     overflow: hidden;
-    font-weight: 300; font-family: &#039;Open Sans&#039;, sans-serif;"
-    class="wysiwyg editable growpage"><!-- InstanceBeginEditable name="content1715" -->
-
-    <p>Mike del Ferro (Amsterdam) is een internationaal geroemd pianist met een enorme muzikale veelzijdigheid die inmiddels heeft geresulteerd in een concertpraktijk in ruim 100 landen, variërend van solo recitals tot crossovers met traditionele muziek.Dit laatste in de meest uiteenlopende landen over de hele wereld.</p><p><br /></p><p>Mike heeft een exclusief contract getekend voor 10 cd's bij <a href="http://www.challenge.nl/product/1308219861">Challenge Records International</a>, een serie cd's genaamd "Songs inspired by wandering the Globe", die gebaseerd zijn op zijn reizen.Het eerste album, "the Journey"(met zijn nieuwe trio, bassist Jeroen Vierdag en drummer Bruno Castellucci) is in maart 2012 uitgebracht, het 2e album,"impressions from Brazil" is in augustus 2013 verschenen met als gast de Braziliaanse Zangeres/Gitariste Ceumar.</p><p><br /></p><p>Mike del Ferro is de zoon van operazanger Leonardo del Ferro (1921-1992) die onder meer met Maria Callas en Leonard Bernstein heeft gezongen en opgenomen. Tevens was Leonardo del Ferro de ontwikkelaar van de beroemde anti-stottertherapie de "del ferro methode".</p><p>Mike begon op 9 jarige leeftijd met klassiek piano. Rond zijn 17e maakte hij de switch naar jazz en wereldmuziek en in 1990 studeerde hij cum laude af op het Amsterdams Conservatorium. Ook studeerde hij arrangeren en compositie bij Bob Brookmeyer in Keulen.</p><p>In 1989 won hij drie grote prijzen; de eerste prijs (een vleugel) op het Nationale Pianoconcours Lichte Muziek in Rotterdam en de solistenprijs van the International Euro Jazz Contest in Brussel.Ook won hij de solisten prijs op een Internationaal Jazzconcours in Tsjechië. In 2009 ontving hij de Kiwani's Jazz Award.</p><p><br /></p><p>Mike del Ferro heeft inmiddels samengewerkt met onder meer Toots Thielemans, Branford Marsalis, Jack DeJohnette, Randy Brecker, Oscar Castro Neves, Deborah Brown, Erik Truffaz, Jorge Rossy, Scott Hamilton, Richard Galliano, Thijs van Leer (Focus), Harold Land, Jan Akkerman, Norma Winstone, Benny Bailey, Candy Dulfer, Trijntje Oosterhuis, Badi Assad en vele anderen. Ook hij heeft inmiddels op tientallen CD's meegespeeld, variërend van Dixieland tot Wereldmuziek. Onder zijn eigen naam zijn inmiddels vele cd's verschenen, onder meer van het zeer succesvolle "opera meets jazz" programma.</p><p><br /></p><p>Momenteel treedt Mike del Ferro voornamelijk op met zijn eigen trio, daarnaast geeft hij solo concerten en ook geeft hij masterclasses over de hele wereld.Zie ook "projects".</p>   
-
-    <!-- InstanceEndEditable --></div>
+    font-weight: 300; font-family: &#039;Open Sans&#039;, sans-serif;" class="wysiwyg editable growpage"><!-- InstanceBeginEditable name="content1715" --><p>Mike del Ferro (Amsterdam) is een internationaal geroemd pianist met een enorme muzikale veelzijdigheid die inmiddels heeft geresulteerd in een concertpraktijk in tot nu toe 116&nbsp; landen, vari&euml;rend van solo recitals tot crossovers met traditionele muziek.Dit laatste in de meest uiteenlopende landen over de hele wereld.</p><p>&nbsp;</p><p>Mike heeft een exclusief contract getekend voor 10 cd's bij&nbsp;<a target="_blank" href="http://www.challenge.nl/product/1308219861">Challenge Records International</a>, een serie cd's genaamd "Songs inspired by wandering the Globe", die gebaseerd zijn op zijn reizen.Het eerste album, "the Journey"&nbsp; is in maart 2012 uitgebracht, het 2e album,"impressions from Brazil" is in augustus 2013 verschenen met als gast de Braziliaanse Zangeres/Gitariste Ceumar.Het 3e album "the Johannesburg sessions", opgenomen in Zuid Afrika verscheen in 2015.De 4e cd in deze serie, "opera meets jazz" met het Metropole Orkest en sopraan Claron McFadden verschijnt in 2016</p><p>&nbsp;</p><p>Mike del Ferro is de zoon van operazanger Leonardo del Ferro (1921-1992) die onder meer met Maria Callas en Leonard Bernstein samenwerkte. Tevens was Leonardo del Ferro de ontwikkelaar van de beroemde anti-stottertherapie de "del ferro methode".</p><p>&nbsp;</p><p>Mike begon op 9 jarige leeftijd met klassiek piano. Rond zijn 17e maakte hij de switch naar jazz en wereldmuziek en in 1990 studeerde hij cum laude af op het Amsterdams Conservatorium. Ook studeerde hij arrangeren en compositie bij Bob Brookmeyer in Keulen.</p><p>&nbsp;</p><p>In 1989 won hij drie grote prijzen; de eerste prijs (een vleugel) op het Nationale Pianoconcours Lichte Muziek in Rotterdam en de solistenprijs van the International Euro Jazz Contest in Brussel.Ook won hij de solisten prijs op een Internationaal Jazzconcours in Tsjechi&euml;. In 2009 ontving hij de Kiwani's Jazz Award.</p><p>&nbsp;</p><p>Mike del Ferro heeft inmiddels samengewerkt met onder meer Toots Thielemans, Branford Marsalis, Jack DeJohnette, Randy Brecker, Oscar Castro Neves, Deborah Brown, Erik Truffaz, Jorge Rossy, Scott Hamilton, Richard Galliano, Thijs van Leer (Focus), Harold Land, Jan Akkerman, Norma Winstone, Benny Bailey, Candy Dulfer, Trijntje Oosterhuis en vele anderen. Ook hij heeft inmiddels op tientallen CD's meegespeeld, vari&euml;rend van Dixieland tot Wereldmuziek.</p><p>&nbsp;</p><!-- InstanceEndEditable --><p>&nbsp;</p></div>
 
         
   
@@ -615,8 +607,7 @@ $(document).ready(function() {
 
   
   
-    <div      
-    style="overflow: auto; position: absolute; 
+    <div style="overflow: auto; position: absolute; 
     text-align: left; 
     left: 693px; 
     top: 96px; 
@@ -625,8 +616,7 @@ $(document).ready(function() {
     color: rgb(255,255,255); 
     font-size:59px;line-height:84px;letter-spacing:-1px;text-align:left;;
     overflow: hidden;
-    font-weight: 700; font-family: &#039;Open Sans&#039;, sans-serif;"
-    class="wysiwyg "><!-- InstanceBeginEditable name="content1716" -->
+    font-weight: 700; font-family: &#039;Open Sans&#039;, sans-serif;" class="wysiwyg "><!-- InstanceBeginEditable name="content1716" -->
 
     bio   
 
@@ -662,8 +652,7 @@ $(document).ready(function() {
 
   
   
-    <div      
-    style="overflow: auto; position: absolute; 
+    <div style="overflow: auto; position: absolute; 
     text-align: left; 
     left: 936px; 
     top: 130px; 
@@ -672,8 +661,7 @@ $(document).ready(function() {
     color: rgb(255,255,255); 
     font-size:24px;line-height:33px;letter-spacing:0px;text-align:right;;
     overflow: hidden;
-    font-weight: 700; font-family: &#039;Open Sans&#039;, sans-serif;"
-    class="wysiwyg "><!-- InstanceBeginEditable name="content1889" -->
+    font-weight: 700; font-family: &#039;Open Sans&#039;, sans-serif;" class="wysiwyg "><!-- InstanceBeginEditable name="content1889" -->
 
     select a language   
 
@@ -706,8 +694,7 @@ $(document).ready(function() {
   
 
     <div style="overflow: hidden; position: absolute; left: 0px; top: 0px; 
-    width: 61px; height: 65px; font-size:14px;font-weight:300;line-height:1.4em;letter-spacing:0px;text-align:left    ; text-align: center;"
-    class="shape top left home"><i class="fa fa-bars" style="display: inline-block; font-size: 45.75px; line-height: 65px; color: rgb(255,255,255);"></i></div>
+    width: 61px; height: 65px; font-size:14px;font-weight:300;line-height:1.4em;letter-spacing:0px;text-align:left    ; text-align: center;" class="shape top left home"><i class="fa fa-bars" style="display: inline-block; font-size: 45.75px; line-height: 65px; color: rgb(255,255,255);"></i></div>
   
 
   
@@ -738,8 +725,7 @@ $(document).ready(function() {
   
 
     <div style="overflow: hidden; position: absolute; left: 1167px; top: 128px; 
-    width: 45px; height: 45px; font-size:14px;font-weight:300;line-height:1.4em;letter-spacing:0px;text-align:left    ; text-align: center;"
-    class="shape "><i class="fa fa-caret-down" style="display: inline-block; font-size: 33.75px; line-height: 45px; color: rgb(255,255,255);"></i></div>
+    width: 45px; height: 45px; font-size:14px;font-weight:300;line-height:1.4em;letter-spacing:0px;text-align:left    ; text-align: center;" class="shape "><i class="fa fa-caret-down" style="display: inline-block; font-size: 33.75px; line-height: 45px; color: rgb(255,255,255);"></i></div>
   
 
   
@@ -762,8 +748,7 @@ $(document).ready(function() {
     left:   951px; 
     top:    123px; 
     width:  256px; 
-    height: 54px;" 
-    title="Select a language" class="pagelink "></a>
+    height: 54px;" title="Select a language" class="pagelink "></a>
   
 
 
