--- a/bio-portuges.html
+++ b/bio-portuges.html
@@ -20,23 +20,23 @@ SUPPORTED: flyleft, flyright, flyup, flydown, home, back, menu, fadein, fadeout
  
 <!-- Mirrored from withoutcoding.com/editions/preview/33/bio-portuges by HTTrack Website Copier/3.x [XR&CO'2013], Tue, 03 Nov 2015 08:50:18 GMT -->
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
-<HEAD>
+<head>
   <!-- InstanceBeginEditable name="doctitle" -->
   <title> bio Portuges</title>
   <!-- InstanceEndEditable -->
   <!-- InstanceBeginEditable name="head" --><!-- InstanceEndEditable -->
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <meta name="viewport" content="width=1400">
-  <meta name="mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <meta name="viewport" content="width=1400" />
+  <meta name="mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
   <!--Link to mobile version -->
-<link rel="alternate" media="only screen and (max-width: 640px)" href="bio-portuges-2.html" >
+<link rel="alternate" media="only screen and (max-width: 640px)" href="bio-portuges-2.html" />
 
   <script type="text/javascript" src="js/jquery-1.11.2.min.js"></script>
   <script type="text/javascript" src="js/modernizr.touch.js"></script>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-          <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
-          <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css'>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" />
+          <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css' />
+          <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css' />
     
 
 <style type="text/css">
@@ -526,13 +526,11 @@ $(document).ready(function() {
  ga('send', 'pageview');
 
 </script>
- </HEAD>
- <BODY>
+ </head>
+ <body>
  <div id="innerinnerbody">
  <div id="innerbody">
- <div id="bg" 
-   style="background: url('jpg/363.jpg') center center no-repeat; background-size: cover;"
-  >
+ <div id="bg" style="background: url('jpg/363.jpg') center center no-repeat; background-size: cover;">
   </div>
      <div id="container">
 
@@ -568,8 +566,7 @@ $(document).ready(function() {
 
   
   
-    <div      
-    style="overflow: auto; position: absolute; 
+    <div style="overflow: auto; position: absolute; 
     text-align: left; 
     left: 694px; 
     top: 206px; 
@@ -578,12 +575,7 @@ $(document).ready(function() {
     color: rgb(255,255,255); 
     font-size:18px;line-height:25px;letter-spacing:0px;text-align:left;;
     overflow: hidden;
-    font-weight: 300; font-family: &#039;Open Sans&#039;, sans-serif;"
-    class="wysiwyg editable growpage"><!-- InstanceBeginEditable name="content1733" -->
-
-    <p>Pianista, Compositor e Arranjador, Mike del Ferro<strong> </strong>é filho do cantor de opera Leonardo del Ferro(1921-1992), que cantou e gravou com Maria Callas na década de 50. Mike começou tocando piano clássico aos 9 anos e cresceu em meio à música lírica e clássica. Sua idéia de unir a ópera e o jazz o levou a explorar um novo território, com o resultado de um grande sucesso em todo o mundo – o CD Belcanto.</p><p>Ganhou o prêmio de solista do International Euro Jazz Contest e reconhecimento internacional por seu estilo próprio e suas improvisações.</p><p>Fez concertos com músicos como Toots Thielemans, Jack DeJohnette, Randy Brecker, Oscar Castro Neves, Deborah Brown, Erik Truffaz, Jorge Rossy, Sibongile Khumalo, Carl Allen, Scott Hamilton, Richard Galliano, Thijs van Leer (Focus), Harold Land, Jan Akkerman, Norma Winstone, Benny Bailey, Candy Dulfer, Trijntje Oosterhuis, Badi Assad, Fernanda Porto, Madou Diabate.</p>   
-
-    <!-- InstanceEndEditable --></div>
+    font-weight: 300; font-family: &#039;Open Sans&#039;, sans-serif;" class="wysiwyg editable growpage"><!-- InstanceBeginEditable name="content1733" --><p>Pianista, Compositor e Arranjador, Mike del Ferro<strong>&nbsp;</strong>&eacute; filho do cantor de opera Leonardo del Ferro(1921-1992), que cantou e gravou com Maria Callas na d&eacute;cada de 50. Mike come&ccedil;ou tocando piano cl&aacute;ssico aos 9 anos e cresceu em meio &agrave; m&uacute;sica l&iacute;rica e cl&aacute;ssica. Sua id&eacute;ia de unir a &oacute;pera e o jazz o levou a explorar um novo territ&oacute;rio, com o resultado de um grande sucesso em todo o mundo &ndash; o CD Belcanto.</p><p>Mike del Ferro poderia ser conhecido tamb&eacute;m com Mike del Mundo. O pianista possui in&uacute;meros trabalhos com m&uacute;sicos de v&aacute;rios pa&iacute;ses.</p><p>Ganhou o pr&ecirc;mio de solista do International Euro Jazz Contest e reconhecimento internacional por seu estilo pr&oacute;prio e suas improvisa&ccedil;&otilde;es.</p><p>Fez concertos com m&uacute;sicos como Toots Thielemans, Jack DeJohnette, Randy Brecker, Oscar Castro Neves, Deborah Brown, Erik Truffaz, Jorge Rossy, Sibongile Khumalo, Carl Allen, Scott Hamilton, Richard Galliano, Thijs van Leer (Focus), Harold Land, Jan Akkerman, Norma Winstone, Benny Bailey, Candy Dulfer, Trijntje Oosterhuis, Badi Assad, Fernanda Porto, Madou Diabate.</p><!-- InstanceEndEditable --></div>
 
         
   
@@ -615,8 +607,7 @@ $(document).ready(function() {
 
   
   
-    <div      
-    style="overflow: auto; position: absolute; 
+    <div style="overflow: auto; position: absolute; 
     text-align: left; 
     left: 693px; 
     top: 96px; 
@@ -625,8 +616,7 @@ $(document).ready(function() {
     color: rgb(255,255,255); 
     font-size:59px;line-height:84px;letter-spacing:-1px;text-align:left;;
     overflow: hidden;
-    font-weight: 700; font-family: &#039;Open Sans&#039;, sans-serif;"
-    class="wysiwyg "><!-- InstanceBeginEditable name="content1734" -->
+    font-weight: 700; font-family: &#039;Open Sans&#039;, sans-serif;" class="wysiwyg "><!-- InstanceBeginEditable name="content1734" -->
 
     bio   
 
@@ -662,8 +652,7 @@ $(document).ready(function() {
 
   
   
-    <div      
-    style="overflow: auto; position: absolute; 
+    <div style="overflow: auto; position: absolute; 
     text-align: left; 
     left: 936px; 
     top: 130px; 
@@ -672,8 +661,7 @@ $(document).ready(function() {
     color: rgb(255,255,255); 
     font-size:24px;line-height:33px;letter-spacing:0px;text-align:right;;
     overflow: hidden;
-    font-weight: 700; font-family: &#039;Open Sans&#039;, sans-serif;"
-    class="wysiwyg "><!-- InstanceBeginEditable name="content1909" -->
+    font-weight: 700; font-family: &#039;Open Sans&#039;, sans-serif;" class="wysiwyg "><!-- InstanceBeginEditable name="content1909" -->
 
     select a language   
 
@@ -706,8 +694,7 @@ $(document).ready(function() {
   
 
     <div style="overflow: hidden; position: absolute; left: 0px; top: 0px; 
-    width: 61px; height: 65px; font-size:14px;font-weight:300;line-height:1.4em;letter-spacing:0px;text-align:left    ; text-align: center;"
-    class="shape top left home"><i class="fa fa-bars" style="display: inline-block; font-size: 45.75px; line-height: 65px; color: rgb(255,255,255);"></i></div>
+    width: 61px; height: 65px; font-size:14px;font-weight:300;line-height:1.4em;letter-spacing:0px;text-align:left    ; text-align: center;" class="shape top left home"><i class="fa fa-bars" style="display: inline-block; font-size: 45.75px; line-height: 65px; color: rgb(255,255,255);"></i></div>
   
 
   
@@ -738,8 +725,7 @@ $(document).ready(function() {
   
 
     <div style="overflow: hidden; position: absolute; left: 1167px; top: 128px; 
-    width: 45px; height: 45px; font-size:14px;font-weight:300;line-height:1.4em;letter-spacing:0px;text-align:left    ; text-align: center;"
-    class="shape "><i class="fa fa-caret-down" style="display: inline-block; font-size: 33.75px; line-height: 45px; color: rgb(255,255,255);"></i></div>
+    width: 45px; height: 45px; font-size:14px;font-weight:300;line-height:1.4em;letter-spacing:0px;text-align:left    ; text-align: center;" class="shape "><i class="fa fa-caret-down" style="display: inline-block; font-size: 33.75px; line-height: 45px; color: rgb(255,255,255);"></i></div>
   
 
   
@@ -762,8 +748,7 @@ $(document).ready(function() {
     left:   951px; 
     top:    123px; 
     width:  256px; 
-    height: 54px;" 
-    title="Select a language" class="pagelink "></a>
+    height: 54px;" title="Select a language" class="pagelink "></a>
   
 
 
