--- a/bio-english.html
+++ b/bio-english.html
@@ -20,23 +20,23 @@ SUPPORTED: flyleft, flyright, flyup, flydown, home, back, menu, fadein, fadeout
  
 <!-- Mirrored from withoutcoding.com/editions/preview/33/bio-english by HTTrack Website Copier/3.x [XR&CO'2013], Tue, 03 Nov 2015 08:49:37 GMT -->
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
-<HEAD>
+<head>
   <!-- InstanceBeginEditable name="doctitle" -->
   <title> bio English</title>
   <!-- InstanceEndEditable -->
   <!-- InstanceBeginEditable name="head" --><!-- InstanceEndEditable -->
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <meta name="viewport" content="width=1400">
-  <meta name="mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <meta name="viewport" content="width=1400" />
+  <meta name="mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
   <!--Link to mobile version -->
-<link rel="alternate" media="only screen and (max-width: 640px)" href="bio-english-2.html" >
+<link rel="alternate" media="only screen and (max-width: 640px)" href="bio-english-2.html" />
 
   <script type="text/javascript" src="js/jquery-1.11.2.min.js"></script>
   <script type="text/javascript" src="js/modernizr.touch.js"></script>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-          <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
-          <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css'>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" />
+          <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css' />
+          <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css' />
     
 
 <style type="text/css">
@@ -526,13 +526,11 @@ $(document).ready(function() {
  ga('send', 'pageview');
 
 </script>
- </HEAD>
- <BODY>
+ </head>
+ <body>
  <div id="innerinnerbody">
  <div id="innerbody">
- <div id="bg" 
-   style="background: url('jpg/363.jpg') center center no-repeat; background-size: cover;"
-  >
+ <div id="bg" style="background: url('jpg/363.jpg') center center no-repeat; background-size: cover;">
   </div>
      <div id="container">
 
@@ -568,8 +566,7 @@ $(document).ready(function() {
 
   
   
-    <div      
-    style="overflow: auto; position: absolute; 
+    <div style="overflow: auto; position: absolute; 
     text-align: left; 
     left: 693px; 
     top: 207px; 
@@ -578,12 +575,7 @@ $(document).ready(function() {
     color: rgb(255,255,255); 
     font-size:18px;line-height:25px;letter-spacing:0px;text-align:left;;
     overflow: hidden;
-    font-weight: 300; font-family: &#039;Open Sans&#039;, sans-serif;"
-    class="wysiwyg editable growpage"><!-- InstanceBeginEditable name="content967" -->
-
-    Mike del Ferro (Amsterdam) was born in Amsterdam.His father was opera singer Leonard del Ferro who sang and recorded with Maria Callas and Leonard Bernstein.He started studying classical piano at the age of nine and after falling in love with Jazz he pursued his studies on Jazz and received a Master in Contemporary Music at the Amsterdam Conservatory.<br /><br />In 1989 he won First Prize at the Rotterdam Jazz Piano Competition, the Soloist Prize at the Europe Jazz Contest in Brussels, and First Prize at the Karlovy Vary Jazz contest and from 1993-1996 studied composition and arrangements with Bob Brookmeyer at the Musikhochschule in Cologne, Germany. In 1995 Mike was appointed on the faculty of the Royal Conservatory in Gent, Belgium where he taught jazz piano until 1997. His reputation as a soloist, accompanist, composer and arranger has led to performances and recordings with musicians such as Toots Thielemans, Branford Marsalis, Jack DeJohnette, Randy Brecker, Oscar Castro Neves, Deborah Brown, Erik Truffaz, Jorge Rossy, Scott Hamilton, Richard Galliano, and many others. To date he has released 15 albums under his own name and he has appeared as a sideman on many albums in different genres from Dixieland to Salsa.<br /><br />Mike has travelled the world extensively (so far 113 countries), searching for collaborations with musicians from cultures quite different to his own, and the musical results have been eye-opening, building musical bridges between cultures not normally within reach of each other. He has managed to combine elements of the revered canons of Western music interspersed with the audacity of Jazz improvisation, and paying tribute to the ancient structures of Asian, South American and African traditional music.<br /><br />He has signed with Challenge Records for a series of 10 CDs named "songs inspired by wandering the globe", taken from collaborations with musicians all over the world. The first trio CD ("the Journey", recorded with his new trio featuring Dutch bassist Jeroen Vierdag and Belgian drummer Bruno Castellucci) ) was released worldwide in the spring of 2012, and the second album, "Impressions of Brazil" has been released in August 2013, featuring Vocalist / Guitarist Ceumar from Brazil.The 3rd Album in this Series, "the Johannesburg Sessions" will be released in april 2015.<br /><br /><br />Mike del Ferro goes by Mark Twain's dictum - "Travel is fatal to prejudice, bigotry, and narrow-mindedness and many of our people need it sorely on these accounts. Broad, wholesome, charitable views of men and things cannot be acquired by vegetating in one little corner of the earth all one's lifetime" ...... his music reflects the array of influences that he has picked up in some of the most exotic places around the world.   
-
-    <!-- InstanceEndEditable --></div>
+    font-weight: 300; font-family: &#039;Open Sans&#039;, sans-serif;" class="wysiwyg editable growpage"><!-- InstanceBeginEditable name="content967" --><p>Mike del Ferro (Amsterdam) was born in Amsterdam.His father was opera singer Leonard del Ferro who sang and recorded with Maria Callas and Leonard Bernstein.He started studying classical piano at the age of nine and after falling in love with Jazz he pursued his studies on Jazz and received a Master in Contemporary Music at the Amsterdam Conservatory.<br /><br />In 1989 he won First Prize at the Rotterdam Jazz Piano Competition, the Soloist Prize at the Europe Jazz Contest in Brussels, and First Prize at the Karlovy Vary Jazz contest and from 1993-1996 studied composition and arrangements with Bob Brookmeyer at the Musikhochschule in Cologne, Germany. In 1995 Mike was appointed on the faculty of the Royal Conservatory in Gent, Belgium where he taught jazz piano until 1997. His reputation as a soloist, accompanist, composer and arranger has led to performances and recordings with musicians such as Toots Thielemans, Branford Marsalis, Jack DeJohnette, Randy Brecker, Oscar Castro Neves, Deborah Brown, Erik Truffaz, Jorge Rossy, Scott Hamilton, Richard Galliano, and many others. To date he has released 15 albums under his own name and he has appeared as a sideman on many albums in different genres from Dixieland to Salsa.<br /><br />Mike has travelled the world extensively (so far 116 countries), searching for collaborations with musicians from cultures quite different to his own, and the musical results have been eye-opening, building musical bridges between cultures not normally within reach of each other. He has managed to combine elements of the revered canons of Western music interspersed with the audacity of Jazz improvisation, and paying tribute to the ancient structures of Asian, South American and African traditional music.<br /><br />He has signed with Challenge Records for a series of 10 CDs named "songs inspired by wandering the globe", taken from collaborations with musicians all over the world. The first trio CD ("the Journey", recorded with his new trio featuring Dutch bassist Jeroen Vierdag and Belgian drummer Bruno Castellucci) ) was released worldwide in the spring of 2012, and the second album, "Impressions of Brazil" has been released in August 2013, featuring Vocalist / Guitarist Ceumar from Brazil.The 3rd Album in this Series, "the Johannesburg Sessions" has been released in april 2015.</p><p>&nbsp;</p><p>The 4th albumin this series will be released in April 2016, "Opera meets Jazz" with the Grammy winner Metropole orchestra" and soprano Claron McFadden<br /><br /><br />Mike del Ferro goes by Mark Twain's dictum - "Travel is fatal to prejudice, bigotry, and narrow-mindedness and many of our people need it sorely on these accounts. Broad, wholesome, charitable views of men and things cannot be acquired by vegetating in one little corner of the earth all one's lifetime" ...... his music reflects the array of influences that he has picked up in some of the most exotic places around the world. <!-- InstanceEndEditable --></p></div>
 
         
   
@@ -615,8 +607,7 @@ $(document).ready(function() {
 
   
   
-    <div      
-    style="overflow: auto; position: absolute; 
+    <div style="overflow: auto; position: absolute; 
     text-align: left; 
     left: 693px; 
     top: 96px; 
@@ -625,8 +616,7 @@ $(document).ready(function() {
     color: rgb(255,255,255); 
     font-size:59px;line-height:84px;letter-spacing:-1px;text-align:left;;
     overflow: hidden;
-    font-weight: 700; font-family: &#039;Open Sans&#039;, sans-serif;"
-    class="wysiwyg "><!-- InstanceBeginEditable name="content968" -->
+    font-weight: 700; font-family: &#039;Open Sans&#039;, sans-serif;" class="wysiwyg "><!-- InstanceBeginEditable name="content968" -->
 
     bio    
 
@@ -662,8 +652,7 @@ $(document).ready(function() {
 
   
   
-    <div      
-    style="overflow: auto; position: absolute; 
+    <div style="overflow: auto; position: absolute; 
     text-align: left; 
     left: 936px; 
     top: 130px; 
@@ -672,8 +661,7 @@ $(document).ready(function() {
     color: rgb(255,255,255); 
     font-size:24px;line-height:33px;letter-spacing:0px;text-align:right;;
     overflow: hidden;
-    font-weight: 700; font-family: &#039;Open Sans&#039;, sans-serif;"
-    class="wysiwyg "><!-- InstanceBeginEditable name="content1881" -->
+    font-weight: 700; font-family: &#039;Open Sans&#039;, sans-serif;" class="wysiwyg "><!-- InstanceBeginEditable name="content1881" -->
 
     select a language   
 
@@ -706,8 +694,7 @@ $(document).ready(function() {
   
 
     <div style="overflow: hidden; position: absolute; left: 0px; top: 0px; 
-    width: 61px; height: 65px; font-size:14px;font-weight:300;line-height:1.4em;letter-spacing:0px;text-align:left    ; text-align: center;"
-    class="shape top left home"><i class="fa fa-bars" style="display: inline-block; font-size: 45.75px; line-height: 65px; color: rgb(255,255,255);"></i></div>
+    width: 61px; height: 65px; font-size:14px;font-weight:300;line-height:1.4em;letter-spacing:0px;text-align:left    ; text-align: center;" class="shape top left home"><i class="fa fa-bars" style="display: inline-block; font-size: 45.75px; line-height: 65px; color: rgb(255,255,255);"></i></div>
   
 
   
@@ -738,8 +725,7 @@ $(document).ready(function() {
   
 
     <div style="overflow: hidden; position: absolute; left: 1167px; top: 128px; 
-    width: 45px; height: 45px; font-size:14px;font-weight:300;line-height:1.4em;letter-spacing:0px;text-align:left    ; text-align: center;"
-    class="shape "><i class="fa fa-caret-down" style="display: inline-block; font-size: 33.75px; line-height: 45px; color: rgb(255,255,255);"></i></div>
+    width: 45px; height: 45px; font-size:14px;font-weight:300;line-height:1.4em;letter-spacing:0px;text-align:left    ; text-align: center;" class="shape "><i class="fa fa-caret-down" style="display: inline-block; font-size: 33.75px; line-height: 45px; color: rgb(255,255,255);"></i></div>
   
 
   
@@ -762,8 +748,7 @@ $(document).ready(function() {
     left:   951px; 
     top:    123px; 
     width:  256px; 
-    height: 54px;" 
-    title="Select a language" class="pagelink "></a>
+    height: 54px;" title="Select a language" class="pagelink "></a>
   
 
 
