Updated '/bio-espanol.html' via CloudCannon

--- a/bio-espanol.html
+++ b/bio-espanol.html
@@ -20,23 +20,23 @@ SUPPORTED: flyleft, flyright, flyup, flydown, home, back, menu, fadein, fadeout
  
 <!-- Mirrored from withoutcoding.com/editions/preview/33/bio-espanol by HTTrack Website Copier/3.x [XR&CO'2013], Tue, 03 Nov 2015 08:50:18 GMT -->
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
-<HEAD>
+<head>
   <!-- InstanceBeginEditable name="doctitle" -->
   <title> bio Espanol</title>
   <!-- InstanceEndEditable -->
   <!-- InstanceBeginEditable name="head" --><!-- InstanceEndEditable -->
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <meta name="viewport" content="width=1400">
-  <meta name="mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <meta name="viewport" content="width=1400" />
+  <meta name="mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
   <!--Link to mobile version -->
-<link rel="alternate" media="only screen and (max-width: 640px)" href="bio-espanol-2.html" >
+<link rel="alternate" media="only screen and (max-width: 640px)" href="bio-espanol-2.html" />
 
   <script type="text/javascript" src="js/jquery-1.11.2.min.js"></script>
   <script type="text/javascript" src="js/modernizr.touch.js"></script>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-          <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
-          <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css'>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" />
+          <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css' />
+          <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css' />
     
 
 <style type="text/css">
@@ -526,13 +526,11 @@ $(document).ready(function() {
  ga('send', 'pageview');
 
 </script>
- </HEAD>
- <BODY>
+ </head>
+ <body>
  <div id="innerinnerbody">
  <div id="innerbody">
- <div id="bg" 
-   style="background: url('jpg/363.jpg') center center no-repeat; background-size: cover;"
-  >
+ <div id="bg" style="background: url('jpg/363.jpg') center center no-repeat; background-size: cover;">
   </div>
      <div id="container">
 
@@ -568,8 +566,7 @@ $(document).ready(function() {
 
   
   
-    <div      
-    style="overflow: auto; position: absolute; 
+    <div style="overflow: auto; position: absolute; 
     text-align: left; 
     left: 694px; 
     top: 206px; 
@@ -578,12 +575,7 @@ $(document).ready(function() {
     color: rgb(255,255,255); 
     font-size:18px;line-height:25px;letter-spacing:0px;text-align:left;;
     overflow: hidden;
-    font-weight: 300; font-family: &#039;Open Sans&#039;, sans-serif;"
-    class="wysiwyg editable growpage"><!-- InstanceBeginEditable name="content1730" -->
-
-    <p>El Pianista Holandés Mike del Ferro es un compositor, pianista y arreglista altamente demandado en la escena internacional que compone e interpreta en un amplio abanico de estilos musicales.</p><p>Ha viajado intensamente por todo el mundo (mas que 100 paises), siempre buscando colaboraciones con músicos de culturas muy diferentes a la suya, lo que le ha proporcionado una mentalidad musical muy abierta, construyendo puentes musicales entre culturas que tradicionalmente no se habían llegado a tocar nunca. Ha sabido combinar los elementos de los respetados cánones de la música Occidental con la audacia de la improvisación jazzística, y al mismo tiempo rindiendo homenaje a las antiguas estructuras de la música tradicional de Asia, Sudamérica y África.<br />  <br />Inició sus estudios de piano clásico a la edad de 8 años; mas tarde se interesó al jazz estudiando Música Contemporánea en el Conservatorio de Ámsterdam donde se diplomó en el año 1990. En 1989 ganó el Primer Premio en el Rótterdam Jazz Piano Contest y en el mismo año ganó el 1er premio como solista en el Europe Jazz Contest de Bruselas y el 1er premio en el Karlovy Vary Jazzcontest en la Republica Checa.</p><p>Ha grabado docenas de álbumes, variando en géneros - desde Jazz tradicional a la Salsa - y ha arreglado música para el cine de animación, con Børge Ring, ganador del Oscar. Su reputación como solista, acompañante, compositor y arreglista lo llevaron rápidamente a trabajar a nivel internacional a través de cientos de conciertos y grabaciones con importantes músicos al más alto nivel. Entre estos: Toots Thielemans, Branford Marsalis, Jack DeJohnette, Randy Brecker, Oscar Castro Neves....Mike. del Ferro es además director del Programa de Jazz de la Asociación Cultural American Voices, por lo que viaja por todo el mundo, desde Latvia a Turkmenistán, Myanmar, Vietnam, Dubai, Colombia, Azerbaijan, Kazakhstan y Taiwán.</p>   
-
-    <!-- InstanceEndEditable --></div>
+    font-weight: 300; font-family: &#039;Open Sans&#039;, sans-serif;" class="wysiwyg editable growpage"><!-- InstanceBeginEditable name="content1730" --><p>El Pianista Holand&eacute;s Mike del Ferro es un compositor, pianista y arreglista altamente demandado en la escena internacional que compone e interpreta en un amplio abanico de estilos musicales.</p><p>Ha viajado intensamente por todo el mundo (mas que 100 paises), siempre buscando colaboraciones con m&uacute;sicos de culturas muy diferentes a la suya, lo que le ha proporcionado una mentalidad musical muy abierta, construyendo puentes musicales entre culturas que tradicionalmente no se hab&iacute;an llegado a tocar nunca. Ha sabido combinar los elementos de los respetados c&aacute;nones de la m&uacute;sica Occidental con la audacia de la improvisaci&oacute;n jazz&iacute;stica, y al mismo tiempo rindiendo homenaje a las antiguas estructuras de la m&uacute;sica tradicional de Asia, Sudam&eacute;rica y &Aacute;frica.<br />&nbsp;&nbsp;<br />Inici&oacute; sus estudios de piano cl&aacute;sico a la edad de 8 a&ntilde;os; mas tarde se interes&oacute; al jazz estudiando M&uacute;sica Contempor&aacute;nea en el Conservatorio de &Aacute;msterdam donde se diplom&oacute; en el a&ntilde;o 1990. En 1989 gan&oacute; el Primer Premio en el R&oacute;tterdam Jazz Piano Contest y en el mismo a&ntilde;o gan&oacute; el 1er premio como solista en el Europe Jazz Contest de Bruselas y el 1er premio en el Karlovy Vary Jazzcontest en la Republica Checa.</p><p>Ha grabado docenas de &aacute;lbumes, variando en g&eacute;neros - desde Jazz tradicional a la Salsa - y ha arreglado m&uacute;sica para el cine de animaci&oacute;n, con B&oslash;rge Ring, ganador del Oscar. Su reputaci&oacute;n como solista, acompa&ntilde;ante, compositor y arreglista lo llevaron r&aacute;pidamente a trabajar a nivel internacional a trav&eacute;s de cientos de conciertos y grabaciones con importantes m&uacute;sicos al m&aacute;s alto nivel. Entre estos: Toots Thielemans, Branford Marsalis, Jack DeJohnette, Randy Brecker, Oscar Castro Neves....Mike. del Ferro fue adem&aacute;s director del Programa de Jazz de la Asociaci&oacute;n Cultural American Voices, por lo que viaja por todo el mundo, desde Latvia a Turkmenist&aacute;n, Myanmar, Vietnam, Dubai, Colombia, Azerbaijan, Kazakhstan y Taiw&aacute;n.</p><!-- InstanceEndEditable --></div>
 
         
   
@@ -615,8 +607,7 @@ $(document).ready(function() {
 
   
   
-    <div      
-    style="overflow: auto; position: absolute; 
+    <div style="overflow: auto; position: absolute; 
     text-align: left; 
     left: 693px; 
     top: 96px; 
@@ -625,8 +616,7 @@ $(document).ready(function() {
     color: rgb(255,255,255); 
     font-size:59px;line-height:84px;letter-spacing:-1px;text-align:left;;
     overflow: hidden;
-    font-weight: 700; font-family: &#039;Open Sans&#039;, sans-serif;"
-    class="wysiwyg "><!-- InstanceBeginEditable name="content1731" -->
+    font-weight: 700; font-family: &#039;Open Sans&#039;, sans-serif;" class="wysiwyg "><!-- InstanceBeginEditable name="content1731" -->
 
     bio   
 
@@ -662,8 +652,7 @@ $(document).ready(function() {
 
   
   
-    <div      
-    style="overflow: auto; position: absolute; 
+    <div style="overflow: auto; position: absolute; 
     text-align: left; 
     left: 936px; 
     top: 130px; 
@@ -672,8 +661,7 @@ $(document).ready(function() {
     color: rgb(255,255,255); 
     font-size:24px;line-height:33px;letter-spacing:0px;text-align:right;;
     overflow: hidden;
-    font-weight: 700; font-family: &#039;Open Sans&#039;, sans-serif;"
-    class="wysiwyg "><!-- InstanceBeginEditable name="content1892" -->
+    font-weight: 700; font-family: &#039;Open Sans&#039;, sans-serif;" class="wysiwyg "><!-- InstanceBeginEditable name="content1892" -->
 
     select a language   
 
@@ -706,8 +694,7 @@ $(document).ready(function() {
   
 
     <div style="overflow: hidden; position: absolute; left: 0px; top: 0px; 
-    width: 61px; height: 65px; font-size:14px;font-weight:300;line-height:1.4em;letter-spacing:0px;text-align:left    ; text-align: center;"
-    class="shape top left home"><i class="fa fa-bars" style="display: inline-block; font-size: 45.75px; line-height: 65px; color: rgb(255,255,255);"></i></div>
+    width: 61px; height: 65px; font-size:14px;font-weight:300;line-height:1.4em;letter-spacing:0px;text-align:left    ; text-align: center;" class="shape top left home"><i class="fa fa-bars" style="display: inline-block; font-size: 45.75px; line-height: 65px; color: rgb(255,255,255);"></i></div>
   
 
   
@@ -738,8 +725,7 @@ $(document).ready(function() {
   
 
     <div style="overflow: hidden; position: absolute; left: 1167px; top: 128px; 
-    width: 45px; height: 45px; font-size:14px;font-weight:300;line-height:1.4em;letter-spacing:0px;text-align:left    ; text-align: center;"
-    class="shape "><i class="fa fa-caret-down" style="display: inline-block; font-size: 33.75px; line-height: 45px; color: rgb(255,255,255);"></i></div>
+    width: 45px; height: 45px; font-size:14px;font-weight:300;line-height:1.4em;letter-spacing:0px;text-align:left    ; text-align: center;" class="shape "><i class="fa fa-caret-down" style="display: inline-block; font-size: 33.75px; line-height: 45px; color: rgb(255,255,255);"></i></div>
   
 
   
@@ -762,8 +748,7 @@ $(document).ready(function() {
     left:   951px; 
     top:    123px; 
     width:  256px; 
-    height: 54px;" 
-    title="Select a language" class="pagelink "></a>
+    height: 54px;" title="Select a language" class="pagelink "></a>
   
 
 
