--- a/bio-deutsch.html
+++ b/bio-deutsch.html
@@ -20,23 +20,23 @@ SUPPORTED: flyleft, flyright, flyup, flydown, home, back, menu, fadein, fadeout
  
 <!-- Mirrored from withoutcoding.com/editions/preview/33/bio-deutsch by HTTrack Website Copier/3.x [XR&CO'2013], Tue, 03 Nov 2015 08:50:18 GMT -->
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
-<HEAD>
+<head>
   <!-- InstanceBeginEditable name="doctitle" -->
   <title> bio Deutsch</title>
   <!-- InstanceEndEditable -->
   <!-- InstanceBeginEditable name="head" --><!-- InstanceEndEditable -->
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <meta name="viewport" content="width=1400">
-  <meta name="mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <meta name="viewport" content="width=1400" />
+  <meta name="mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
   <!--Link to mobile version -->
-<link rel="alternate" media="only screen and (max-width: 640px)" href="bio-deutsch-2.html" >
+<link rel="alternate" media="only screen and (max-width: 640px)" href="bio-deutsch-2.html" />
 
   <script type="text/javascript" src="js/jquery-1.11.2.min.js"></script>
   <script type="text/javascript" src="js/modernizr.touch.js"></script>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-          <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
-          <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css'>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" />
+          <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css' />
+          <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css' />
     
 
 <style type="text/css">
@@ -526,13 +526,11 @@ $(document).ready(function() {
  ga('send', 'pageview');
 
 </script>
- </HEAD>
- <BODY>
+ </head>
+ <body>
  <div id="innerinnerbody">
  <div id="innerbody">
- <div id="bg" 
-   style="background: url('jpg/363.jpg') center center no-repeat; background-size: cover;"
-  >
+ <div id="bg" style="background: url('jpg/363.jpg') center center no-repeat; background-size: cover;">
   </div>
      <div id="container">
 
@@ -568,8 +566,7 @@ $(document).ready(function() {
 
   
   
-    <div      
-    style="overflow: auto; position: absolute; 
+    <div style="overflow: auto; position: absolute; 
     text-align: left; 
     left: 693px; 
     top: 207px; 
@@ -578,12 +575,7 @@ $(document).ready(function() {
     color: rgb(255,255,255); 
     font-size:18px;line-height:25px;letter-spacing:0px;text-align:left;;
     overflow: hidden;
-    font-weight: 300; font-family: &#039;Open Sans&#039;, sans-serif;"
-    class="wysiwyg editable growpage"><!-- InstanceBeginEditable name="content1736" -->
-
-    <p>Der niederländische Pianist, Komponist und Arrangeur Mike del Ferro (Amsterdam) verbindet auf beispiellose Weise unterschiedlichste Musikgenres. Auf seinen umfangreichen Konzertreisen (in bisher 110 Länder) suchte er stets bewusst die Begegnung mit Musikern anderer Kulturen – womit er Brücken schlug zwischen Musikkulturen, die sonst nicht mit einander vereinbar scheinen.<br />Mike schaffte es, die Regeln der abendländischen Musik mit kühnen Jazz-Improvisationen zu kombinieren und dabei althergebrachte Elemente und Strukturen aus der traditionellen asiatischen, südamerikanischen und afrikanischen Musik einfließen zu lassen.</p><p>Er ist einen Exklusivvertrag bei Challenge Records International eingegangen, für eine Serie von 10 CDs mit dem Titel “Songs inspired by Wandering the Globe”, die aus Zusammenarbeiten mit Musikern aus der ganzen Welt entstanden sind. <br />Die erste Trio-CD “the Journey” welche er mit seinem neuen Trio bestehend aus dem niederländischen Bassisten Jeroen Vierdag und dem Belgischen Drummer Bruno Castellucci aufnahm, kam weltweit im Frühjahr 2012 auf den Markt. Das zweite Album mit dem Titel “Impressions of Brazil“ mit der Sängerin und Gitarristin Ceumar aus Brasilien wurde im August 2013 veröffentlicht.</p><p>Mikes Vater war der Opernsänger Leonard del Ferro (1921 – 1992), der auf Auftritte und Aufnahmen mit Maria Callas und Leonard Bernstein zurückblicken konnte. So ist es kein Wunder, dass schon Mikes Kindheit von Musik auf höchstem Niveau geprägt war. In Amsterdam geboren, begann er im Alter von 9 Jahren seine Karriere mit dem klassischen Klavierstudium. Als er seine Liebe zum Jazz entdeckte führte er sein Studium im Jazz fort und erhielt einen Master of Music in Contemporary Music am Konservatorium in Amsterdam.</p><p>1989 gewann der den ersten Preis bei der Rotterdam Jazz Piano Competition, den Solisten Preis beim Europe Jazz Contest in Brüssel, sowie den ersten Preis beim Karlovy Vary Jazz Contest. Von 1993-1996 studierte er Komposition und Arrangement bei Bob Brookmeyer an der Musikhochschule Köln.<br />1995 wurde Mike zur Faculty of the Royal Conservatory in Gent, Belgien berufen wo er bis 1997 Jazz-Piano unterrichtete. Sein guter Ruf als Solist, Begleiter, Komponist und Arrangeur ermöglichte ihm weltweite Auftritte, Aufnahmen und Tourneen mit Musikern wie Toots Thielemans, Branford Marsalis, Jack DeJohnette, Randy Brecker, Oscar Castro Neves, Deborah Brown, Erik Truffaz, Jorge Rossy, Scott Hamilton, Richard Galliano, Thijs van Leer (Focus), Harold Land, Jan Akkerman, Norma Winstone, Benny Bailey, Candy Dulfer, Trijntje Oosterhuis, Badi Assad, Niladri Kumar und vielen mehr.</p><p>Bis heute hat er unter eigenem Namen 15 Alben veröffentlicht und als Gastmusiker bei zahlreichen Alben verschiedener Genres von Dixieland bis Salsa mitgewirkt. Mike del Ferro folgt Mark Twains Maxime –“Reisen ist tödlich für Vorurteile, Bigotterie und Engstirnigkeit und viele unserer Leute brauchen es aus diesem Grunde dringend. Eine verständnisvolle, wohltuende, freundliche Einstellung zu Menschen und Dingen kann nicht erlangt werden indem man sein ganzes Leben in einer winzigen Ecke der Welt zubringt.“…….. Seine Musik spiegelt die vielfältigen Einflüsse wieder die ihn in einigen der exotischsten Orten der Welt geprägt haben</p>   
-
-    <!-- InstanceEndEditable --></div>
+    font-weight: 300; font-family: &#039;Open Sans&#039;, sans-serif;" class="wysiwyg editable growpage"><!-- InstanceBeginEditable name="content1736" --><p>Der niederl&auml;ndische Pianist, Komponist und Arrangeur Mike del Ferro (Amsterdam) verbindet auf beispiellose Weise unterschiedlichste Musikgenres. Auf seinen umfangreichen Konzertreisen (in bisher 116 L&auml;nder) suchte er stets bewusst die Begegnung mit Musikern anderer Kulturen &ndash; womit er Br&uuml;cken schlug zwischen Musikkulturen, die sonst nicht mit einander vereinbar scheinen.<br />Mike schaffte es, die Regeln der abendl&auml;ndischen Musik mit k&uuml;hnen Jazz-Improvisationen zu kombinieren und dabei althergebrachte Elemente und Strukturen aus der traditionellen asiatischen, s&uuml;damerikanischen und afrikanischen Musik einflie&szlig;en zu lassen.</p><p>Er ist einen Exklusivvertrag bei Challenge Records International eingegangen, f&uuml;r eine Serie von 10 CDs mit dem Titel &ldquo;Songs inspired by Wandering the Globe&rdquo;, die aus Zusammenarbeiten mit Musikern aus der ganzen Welt entstanden sind.&nbsp;<br />Die erste Trio-CD &ldquo;the Journey&rdquo; welche er mit seinem neuen Trio bestehend aus dem niederl&auml;ndischen Bassisten Jeroen Vierdag und dem Belgischen Drummer Bruno Castellucci aufnahm, kam weltweit im Fr&uuml;hjahr 2012 auf den Markt. Das zweite Album mit dem Titel &ldquo;Impressions of Brazil&ldquo; mit der S&auml;ngerin und Gitarristin Ceumar aus Brasilien wurde im August 2013 ver&ouml;ffentlicht.</p><p>Mikes Vater war der Operns&auml;nger Leonard del Ferro (1921 &ndash; 1992), der auf Auftritte und Aufnahmen mit Maria Callas und Leonard Bernstein zur&uuml;ckblicken konnte. So ist es kein Wunder, dass schon Mikes Kindheit von Musik auf h&ouml;chstem Niveau gepr&auml;gt war. In Amsterdam geboren, begann er im Alter von 9 Jahren seine Karriere mit dem klassischen Klavierstudium. Als er seine Liebe zum Jazz entdeckte f&uuml;hrte er sein Studium im Jazz fort und erhielt einen Master of Music in Contemporary Music am Konservatorium in Amsterdam.</p><p>1989 gewann der den ersten Preis bei der Rotterdam Jazz Piano Competition, den Solisten Preis beim Europe Jazz Contest in Br&uuml;ssel, sowie den ersten Preis beim Karlovy Vary Jazz Contest. Von 1993-1996 studierte er Komposition und Arrangement bei Bob Brookmeyer an der Musikhochschule K&ouml;ln.<br />1995 wurde Mike zur Faculty of the Royal Conservatory in Gent, Belgien berufen wo er bis 1997 Jazz-Piano unterrichtete. Sein guter Ruf als Solist, Begleiter, Komponist und Arrangeur erm&ouml;glichte ihm weltweite Auftritte, Aufnahmen und Tourneen mit Musikern wie Toots Thielemans, Branford Marsalis, Jack DeJohnette, Randy Brecker, Oscar Castro Neves, Deborah Brown, Erik Truffaz, Jorge Rossy, Scott Hamilton, Richard Galliano, Thijs van Leer (Focus), Harold Land, Jan Akkerman, Norma Winstone, Benny Bailey, Candy Dulfer, Trijntje Oosterhuis, Badi Assad, Niladri Kumar und vielen mehr.</p><p>Bis heute hat er unter eigenem Namen 15 Alben ver&ouml;ffentlicht und als Gastmusiker bei zahlreichen Alben verschiedener Genres von Dixieland bis Salsa mitgewirkt. Mike del Ferro folgt Mark Twains Maxime &ndash;&ldquo;Reisen ist t&ouml;dlich f&uuml;r Vorurteile, Bigotterie und Engstirnigkeit und viele unserer Leute brauchen es aus diesem Grunde dringend. Eine verst&auml;ndnisvolle, wohltuende, freundliche Einstellung zu Menschen und Dingen kann nicht erlangt werden indem man sein ganzes Leben in einer winzigen Ecke der Welt zubringt.&ldquo;&hellip;&hellip;.. Seine Musik spiegelt die vielf&auml;ltigen Einfl&uuml;sse wieder die ihn in einigen der exotischsten Orten der Welt gepr&auml;gt haben</p><!-- InstanceEndEditable --></div>
 
         
   
@@ -615,8 +607,7 @@ $(document).ready(function() {
 
   
   
-    <div      
-    style="overflow: auto; position: absolute; 
+    <div style="overflow: auto; position: absolute; 
     text-align: left; 
     left: 693px; 
     top: 96px; 
@@ -625,8 +616,7 @@ $(document).ready(function() {
     color: rgb(255,255,255); 
     font-size:59px;line-height:84px;letter-spacing:-1px;text-align:left;;
     overflow: hidden;
-    font-weight: 700; font-family: &#039;Open Sans&#039;, sans-serif;"
-    class="wysiwyg "><!-- InstanceBeginEditable name="content1737" -->
+    font-weight: 700; font-family: &#039;Open Sans&#039;, sans-serif;" class="wysiwyg "><!-- InstanceBeginEditable name="content1737" -->
 
     bio   
 
@@ -662,8 +652,7 @@ $(document).ready(function() {
 
   
   
-    <div      
-    style="overflow: auto; position: absolute; 
+    <div style="overflow: auto; position: absolute; 
     text-align: left; 
     left: 936px; 
     top: 130px; 
@@ -672,8 +661,7 @@ $(document).ready(function() {
     color: rgb(255,255,255); 
     font-size:24px;line-height:33px;letter-spacing:0px;text-align:right;;
     overflow: hidden;
-    font-weight: 700; font-family: &#039;Open Sans&#039;, sans-serif;"
-    class="wysiwyg "><!-- InstanceBeginEditable name="content1886" -->
+    font-weight: 700; font-family: &#039;Open Sans&#039;, sans-serif;" class="wysiwyg "><!-- InstanceBeginEditable name="content1886" -->
 
     select a language   
 
@@ -706,8 +694,7 @@ $(document).ready(function() {
   
 
     <div style="overflow: hidden; position: absolute; left: 0px; top: 0px; 
-    width: 61px; height: 65px; font-size:14px;font-weight:300;line-height:1.4em;letter-spacing:0px;text-align:left    ; text-align: center;"
-    class="shape top left home"><i class="fa fa-bars" style="display: inline-block; font-size: 45.75px; line-height: 65px; color: rgb(255,255,255);"></i></div>
+    width: 61px; height: 65px; font-size:14px;font-weight:300;line-height:1.4em;letter-spacing:0px;text-align:left    ; text-align: center;" class="shape top left home"><i class="fa fa-bars" style="display: inline-block; font-size: 45.75px; line-height: 65px; color: rgb(255,255,255);"></i></div>
   
 
   
@@ -738,8 +725,7 @@ $(document).ready(function() {
   
 
     <div style="overflow: hidden; position: absolute; left: 1167px; top: 128px; 
-    width: 45px; height: 45px; font-size:14px;font-weight:300;line-height:1.4em;letter-spacing:0px;text-align:left    ; text-align: center;"
-    class="shape "><i class="fa fa-caret-down" style="display: inline-block; font-size: 33.75px; line-height: 45px; color: rgb(255,255,255);"></i></div>
+    width: 45px; height: 45px; font-size:14px;font-weight:300;line-height:1.4em;letter-spacing:0px;text-align:left    ; text-align: center;" class="shape "><i class="fa fa-caret-down" style="display: inline-block; font-size: 33.75px; line-height: 45px; color: rgb(255,255,255);"></i></div>
   
 
   
@@ -762,8 +748,7 @@ $(document).ready(function() {
     left:   951px; 
     top:    123px; 
     width:  256px; 
-    height: 54px;" 
-    title="Select a language" class="pagelink "></a>
+    height: 54px;" title="Select a language" class="pagelink "></a>
   
 
 
