Updated 'bio-russian.html' via CloudCannon

--- a/bio-russian.html
+++ b/bio-russian.html
@@ -20,23 +20,23 @@ SUPPORTED: flyleft, flyright, flyup, flydown, home, back, menu, fadein, fadeout
  
 <!-- Mirrored from withoutcoding.com/editions/preview/33/bio-russian by HTTrack Website Copier/3.x [XR&CO'2013], Tue, 03 Nov 2015 08:50:18 GMT -->
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
-<HEAD>
+<head>
   <!-- InstanceBeginEditable name="doctitle" -->
   <title> bio Russian</title>
   <!-- InstanceEndEditable -->
   <!-- InstanceBeginEditable name="head" --><!-- InstanceEndEditable -->
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <meta name="viewport" content="width=1400">
-  <meta name="mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <meta name="viewport" content="width=1400" />
+  <meta name="mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
   <!--Link to mobile version -->
-<link rel="alternate" media="only screen and (max-width: 640px)" href="bio-russian-2.html" >
+<link rel="alternate" media="only screen and (max-width: 640px)" href="bio-russian-2.html" />
 
   <script type="text/javascript" src="js/jquery-1.11.2.min.js"></script>
   <script type="text/javascript" src="js/modernizr.touch.js"></script>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-          <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
-          <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css'>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" />
+          <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css' />
+          <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css' />
     
 
 <style type="text/css">
@@ -526,13 +526,11 @@ $(document).ready(function() {
  ga('send', 'pageview');
 
 </script>
- </HEAD>
- <BODY>
+ </head>
+ <body>
  <div id="innerinnerbody">
  <div id="innerbody">
- <div id="bg" 
-   style="background: url('jpg/363.jpg') center center no-repeat; background-size: cover;"
-  >
+ <div id="bg" style="background: url('jpg/363.jpg') center center no-repeat; background-size: cover;">
   </div>
      <div id="container">
 
@@ -568,8 +566,7 @@ $(document).ready(function() {
 
   
   
-    <div      
-    style="overflow: auto; position: absolute; 
+    <div style="overflow: auto; position: absolute; 
     text-align: left; 
     left: 693px; 
     top: 206px; 
@@ -578,12 +575,13 @@ $(document).ready(function() {
     color: rgb(255,255,255); 
     font-size:18px;line-height:25px;letter-spacing:0px;text-align:left;;
     overflow: hidden;
-    font-weight: 300; font-family: &#039;Open Sans&#039;, sans-serif;"
-    class="wysiwyg editable growpage"><!-- InstanceBeginEditable name="content1721" -->
-
-    <p>Майк дель Ферро - гордость Нидерландов, пианист, композитор и аранжировщик, охватывающий своим творчеством потрясающее разнообразие жанров. На протяжении всей своей карьеры Майк путешествует по всему миру и экспериментирует с национальной музыкой и культурой той страны, в которую приезжает. Его концерты состоялись уже в 91 стране, и в каждой из них его знают как знатока западной классической и импровизационной музыки, умеющего привносить в неё элементы восточных мелодий и африканских ритмов.</p><p>Его отцом был оперный певец Леонард дель Ферро, который работал с известнейшей американской оперной певицей Марией Каллас, так что Майк впитывал хорошую музыку с детских лет. В какой-то момент он начал заниматься джазовым фортепиано наравне с классическим и уже в студенческие годы стал лауреатом престижных европейских конкурсов в Роттердаме, Брюсселе и Карловых Варах.</p><p>В середине 1990-х он учился у тромбониста и пианиста Боба Брукмайера в Германии, а затем сам стал преподавателем Гентской консерватории в Бельгии. Разносторонний талант и неповторимый стиль игры позволил Майку дель Ферро стать полноправным участником ансамблей таких звёзд мирового джаза, как исполнитель на губной гармонике Тутс Тилеманс, барабанщик Джек Де Джонетт, певица Дебора Браун, аккордеонист Ришар Гальяно и многие другие.<br />В его дискографии альбомы различных жанров, от сальсы до диксиленда, а кроме того — музыка к анимации известного художника-мультипликатора Борге Ринга. Майк дель Ферро - один из самых почитаемых музыкантов Голландии, которого считают своим в каждом уголке мира: где бы он ни был, он воспринимает местную культуру, и это можно услышать в его музыке.</p>   
-
-    <!-- InstanceEndEditable --></div>
+    font-weight: 300; font-family: &#039;Open Sans&#039;, sans-serif;" class="wysiwyg editable growpage">
+    <!--base32-414pwwvmc5q66ta2cnkpjvj5chmq8rb2dhjj0vk1dnjku8k3dxq78tbeegrkechh48g0-base32-->
+    <p>Майк дель Ферро - гордость Нидерландов, пианист, композитор и аранжировщик, охватывающий своим творчеством потрясающее разнообразие жанров. На протяжении всей своей карьеры Майк путешествует по всему миру и экспериментирует с национальной музыкой и культурой той страны, в которую приезжает. Его концерты состоялись уже в 117 стране, и в каждой из них его знают как знатока западной классической и импровизационной музыки, умеющего привносить в неё элементы восточных мелодий и африканских ритмов.</p>
+    <p>Его отцом был оперный певец Леонард дель Ферро, который работал с известнейшей американской оперной певицей Марией Каллас, так что Майк впитывал хорошую музыку с детских лет. В какой-то момент он начал заниматься джазовым фортепиано наравне с классическим и уже в студенческие годы стал лауреатом престижных европейских конкурсов в Роттердаме, Брюсселе и Карловых Варах.</p>
+    <p>В середине 1990-х он учился у тромбониста и пианиста Боба Брукмайера в Германии, а затем сам стал преподавателем Гентской консерватории в Бельгии. Разносторонний талант и неповторимый стиль игры позволил Майку дель Ферро стать полноправным участником ансамблей таких звёзд мирового джаза, как исполнитель на губной гармонике Тутс Тилеманс, барабанщик Джек Де Джонетт, певица Дебора Браун, аккордеонист Ришар Гальяно и многие другие.<br />В его дискографии альбомы различных жанров, от сальсы до диксиленда, а кроме того &mdash; музыка к анимации известного художника-мультипликатора Борге Ринга. Майк дель Ферро - один из самых почитаемых музыкантов Голландии, которого считают своим в каждом уголке мира: где бы он ни был, он воспринимает местную культуру, и это можно услышать в его музыке.</p>
+    <!--base32-414pwwvmc5q66ta5dtj4at39ehgp4v3540-base32-->
+  </div>
 
         
   
@@ -615,8 +613,7 @@ $(document).ready(function() {
 
   
   
-    <div      
-    style="overflow: auto; position: absolute; 
+    <div style="overflow: auto; position: absolute; 
     text-align: left; 
     left: 693px; 
     top: 96px; 
@@ -625,8 +622,7 @@ $(document).ready(function() {
     color: rgb(255,255,255); 
     font-size:59px;line-height:84px;letter-spacing:-1px;text-align:left;;
     overflow: hidden;
-    font-weight: 700; font-family: &#039;Open Sans&#039;, sans-serif;"
-    class="wysiwyg "><!-- InstanceBeginEditable name="content1722" -->
+    font-weight: 700; font-family: &#039;Open Sans&#039;, sans-serif;" class="wysiwyg "><!-- InstanceBeginEditable name="content1722" -->
 
     bio    
 
@@ -662,8 +658,7 @@ $(document).ready(function() {
 
   
   
-    <div      
-    style="overflow: auto; position: absolute; 
+    <div style="overflow: auto; position: absolute; 
     text-align: left; 
     left: 936px; 
     top: 130px; 
@@ -672,8 +667,7 @@ $(document).ready(function() {
     color: rgb(255,255,255); 
     font-size:24px;line-height:33px;letter-spacing:0px;text-align:right;;
     overflow: hidden;
-    font-weight: 700; font-family: &#039;Open Sans&#039;, sans-serif;"
-    class="wysiwyg "><!-- InstanceBeginEditable name="content1906" -->
+    font-weight: 700; font-family: &#039;Open Sans&#039;, sans-serif;" class="wysiwyg "><!-- InstanceBeginEditable name="content1906" -->
 
     select a language   
 
@@ -706,8 +700,7 @@ $(document).ready(function() {
   
 
     <div style="overflow: hidden; position: absolute; left: 0px; top: 0px; 
-    width: 61px; height: 65px; font-size:14px;font-weight:300;line-height:1.4em;letter-spacing:0px;text-align:left    ; text-align: center;"
-    class="shape top left home"><i class="fa fa-bars" style="display: inline-block; font-size: 45.75px; line-height: 65px; color: rgb(255,255,255);"></i></div>
+    width: 61px; height: 65px; font-size:14px;font-weight:300;line-height:1.4em;letter-spacing:0px;text-align:left    ; text-align: center;" class="shape top left home"><i class="fa fa-bars" style="display: inline-block; font-size: 45.75px; line-height: 65px; color: rgb(255,255,255);"></i></div>
   
 
   
@@ -738,8 +731,7 @@ $(document).ready(function() {
   
 
     <div style="overflow: hidden; position: absolute; left: 1167px; top: 128px; 
-    width: 45px; height: 45px; font-size:14px;font-weight:300;line-height:1.4em;letter-spacing:0px;text-align:left    ; text-align: center;"
-    class="shape "><i class="fa fa-caret-down" style="display: inline-block; font-size: 33.75px; line-height: 45px; color: rgb(255,255,255);"></i></div>
+    width: 45px; height: 45px; font-size:14px;font-weight:300;line-height:1.4em;letter-spacing:0px;text-align:left    ; text-align: center;" class="shape "><i class="fa fa-caret-down" style="display: inline-block; font-size: 33.75px; line-height: 45px; color: rgb(255,255,255);"></i></div>
   
 
   
@@ -762,8 +754,7 @@ $(document).ready(function() {
     left:   951px; 
     top:    123px; 
     width:  256px; 
-    height: 54px;" 
-    title="Select a language" class="pagelink "></a>
+    height: 54px;" title="Select a language" class="pagelink "></a>
   
 
 
