Updated 'bio-portuges.html' via CloudCannon

--- a/bio-portuges.html
+++ b/bio-portuges.html
@@ -575,7 +575,16 @@ $(document).ready(function() {
     color: rgb(255,255,255); 
     font-size:18px;line-height:25px;letter-spacing:0px;text-align:left;;
     overflow: hidden;
-    font-weight: 300; font-family: &#039;Open Sans&#039;, sans-serif;" class="wysiwyg editable growpage"><!-- InstanceBeginEditable name="content1733" --><p>Pianista, Compositor e Arranjador, Mike del Ferro<strong>&nbsp;</strong>&eacute; filho do cantor de opera Leonardo del Ferro(1921-1992), que cantou e gravou com Maria Callas na d&eacute;cada de 50. Mike come&ccedil;ou tocando piano cl&aacute;ssico aos 9 anos e cresceu em meio &agrave; m&uacute;sica l&iacute;rica e cl&aacute;ssica. Sua id&eacute;ia de unir a &oacute;pera e o jazz o levou a explorar um novo territ&oacute;rio, com o resultado de um grande sucesso em todo o mundo &ndash; o CD Belcanto.</p><p>Mike del Ferro poderia ser conhecido tamb&eacute;m com Mike del Mundo. O pianista possui in&uacute;meros trabalhos com m&uacute;sicos de v&aacute;rios pa&iacute;ses.</p><p>Ganhou o pr&ecirc;mio de solista do International Euro Jazz Contest e reconhecimento internacional por seu estilo pr&oacute;prio e suas improvisa&ccedil;&otilde;es.</p><p>Fez concertos com m&uacute;sicos como Toots Thielemans, Jack DeJohnette, Randy Brecker, Oscar Castro Neves, Deborah Brown, Erik Truffaz, Jorge Rossy, Sibongile Khumalo, Carl Allen, Scott Hamilton, Richard Galliano, Thijs van Leer (Focus), Harold Land, Jan Akkerman, Norma Winstone, Benny Bailey, Candy Dulfer, Trijntje Oosterhuis, Badi Assad, Fernanda Porto, Madou Diabate.</p><!-- InstanceEndEditable --></div>
+    font-weight: 300; font-family: &#039;Open Sans&#039;, sans-serif;" class="wysiwyg editable growpage">
+    <!--base32-414pwwvmc5q66ta2cnkpjvj5chmq8rb2dhjj0vk1dnjku8k3dxq78tbeegrkectk48g0-base32-->
+    <p>Please visit/subscribe to Mike del Ferro's <a target="_blank" href="https://buff.ly/2HeBOYA ">YouTube Channel</a></p>
+    <p>&nbsp;</p>
+    <p>Pianista, Compositor e Arranjador, Mike del Ferro<strong>&nbsp;</strong>&eacute; filho do cantor de opera Leonardo del Ferro(1921-1992), que cantou e gravou com Maria Callas na d&eacute;cada de 50. Mike come&ccedil;ou tocando piano cl&aacute;ssico aos 9 anos e cresceu em meio &agrave; m&uacute;sica l&iacute;rica e cl&aacute;ssica. Sua id&eacute;ia de unir a &oacute;pera e o jazz o levou a explorar um novo territ&oacute;rio, com o resultado de um grande sucesso em todo o mundo &ndash; o CD Belcanto.</p>
+    <p>Mike del Ferro poderia ser conhecido tamb&eacute;m com Mike del Mundo. O pianista possui in&uacute;meros trabalhos com m&uacute;sicos de v&aacute;rios pa&iacute;ses.</p>
+    <p>Ganhou o pr&ecirc;mio de solista do International Euro Jazz Contest e reconhecimento internacional por seu estilo pr&oacute;prio e suas improvisa&ccedil;&otilde;es.</p>
+    <p>Fez concertos com m&uacute;sicos como Toots Thielemans, Jack DeJohnette, Randy Brecker, Oscar Castro Neves, Deborah Brown, Erik Truffaz, Jorge Rossy, Sibongile Khumalo, Carl Allen, Scott Hamilton, Richard Galliano, Thijs van Leer (Focus), Harold Land, Jan Akkerman, Norma Winstone, Benny Bailey, Candy Dulfer, Trijntje Oosterhuis, Badi Assad, Fernanda Porto, Madou Diabate.</p>
+    <!--base32-414pwwvmc5q66ta5dtj4at39ehgp4v3540-base32-->
+  </div>
 
         
   
